# Profit-Taker-Analytics

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ERD.vpp  ERD.vpp.bak_000f  ERD.vpp.bak_001d  LICENSE  PTA_Diagrams.vpp  PTA_Diagrams.vpp.bak_000f  README.md  test.json
.github/: CODEOWNERS
app/: .env  .gitignore  .metadata  LICENSE  README.md  pubspec.yaml
app/android/app/: build.gradle
app/assets/i18n/: en.json  fr.json  pt.json  ru.json  tr.json  zh.json
app/installers/: desktop_inno_script.iss  installer.iss  version_0.8.0_and_later.iss
app/lib/: app.dart  app_layout.dart  main.dart
app/lib/constants/: app_constants.dart  app_links.dart  constants.dart  layout_constants.dart
app/lib/models/: leg_break.dart  phase.dart  phases.dart  run_data.dart  shield_change.dart  squad_member.dart  total_times.dart
app/lib/navigation/: app_router.dart
app/lib/screens/: advanced_screen.dart
app/lib/services/: deep_link_service.dart  last_runs.dart  parser.dart  run_navigation_service.dart  screenshot_service.dart  settings_service.dart  verify_hash.dart  version_control.dart
app/lib/theme/: app_theme.dart  custom_icons.dart  theme_control.dart  (+1 more)
app/linux/: CMakeLists.txt
app/test/: widget_test.dart
app/windows/: CMakeLists.txt
parser/: README.md  main.py  requirements.txt
parser/json/: run_format.json
parser/src/: analyzer.py  utils.py
rust_core/: .metadata  CHANGELOG.md  LICENSE  README.md  flutter_rust_bridge.yaml  pubspec.yaml
rust_core/android/: build.gradle  settings.gradle
rust_core/example/: README.md  pubspec.yaml
rust_core/ios/: rust_core.podspec
rust_core/lib/: rust_core.dart
rust_core/lib_profit_taker/: Cargo.toml
rust_core/lib_profit_taker/lib_profit_taker_core/: Cargo.toml
rust_core/lib_profit_taker/lib_profit_taker_core/src/: lib.rs
rust_core/lib_profit_taker/lib_profit_taker_core/src/models/: leg_break.rs  leg_position.rs  mod.rs  phase.rs  run.rs  shield_change.rs  squad_member.rs  status_effect.rs  total_times.rs
rust_core/lib_profit_taker/lib_profit_taker_database/: .env  Cargo.toml  diesel.toml  profit_taker.db
rust_core/lib_profit_taker/lib_profit_taker_database/migrations/2025-01-30-003225_setup_db/: down.sql  up.sql
rust_core/lib_profit_taker/lib_profit_taker_database/src/: connection.rs  error.rs  lib.rs  schema.rs
rust_core/lib_profit_taker/lib_profit_taker_database/src/queries/: check_is_pb.rs  delete_favorite.rs  delete_run.rs  edit_run_name.rs  fetch_analytics_data.rs  fetch_average_times.rs  fetch_earliest_run.rs  fetch_latest_run.rs  fetch_next_run.rs  fetch_paginated_runs.rs  fetch_pb_times.rs  fetch_previous_run.rs  fetch_run_data.rs  fetch_second_best_times.rs  insert_favorite.rs  insert_run.rs  is_favorite.rs  latest_run.rs  mod.rs  run_exists.rs
rust_core/lib_profit_taker/lib_profit_taker_database/src/repositories/: favorite_repo.rs  leg_break_repo.rs  leg_position.rs  mod.rs  phase_repo.rs  run_repo.rs  shield_change_repo.rs  squad_repo.rs  status_effect.rs
rust_core/lib_profit_taker/lib_profit_taker_parser/: Cargo.toml  main.rs
rust_core/lib_profit_taker/lib_profit_taker_parser/src/: cli.rs  constants.rs  lib.rs  line_utils.rs  main.rs  parser_initializer.rs  parser_state.rs
rust_core/lib_profit_taker/lib_profit_taker_parser/src/parser/: events.rs  loop.rs  mod.rs  phase.rs
rust_core/lib_profit_taker/src/: frb_generated.rs  lib.rs
rust_core/lib_profit_taker/src/api/: mod.rs
rust_core/lib_profit_taker/src/utils/: json_to_db.rs  mod.rs
rust_core/linux/: CMakeLists.txt
rust_core/macos/: rust_core.podspec
rust_core/windows/: CMakeLists.txt
tools/: run_parser.ahk
(+175 files in other folders)
