[package]
name = "lib_profit_taker"
version = "0.1.0"

authors.workspace = true
repository.workspace = true
license.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "staticlib"]

[workspace]
package.authors = ["Basi", "Kalaay", "RemasteredArch"]
package.publish = false
package.repository = "https://github.com/Basiiii/Profit-Taker-Analytics"
package.readme = true
package.license = "GPL-3.0-or-later"
package.edition = "2021"

members = ["lib_profit_taker_database", "lib_profit_taker_parser", "lib_profit_taker_core"]

[workspace.dependencies]
lib_profit_taker_database = { version = "*", path = "./lib_profit_taker_database/" }
lib_profit_taker_parser = { version = "*", path = "./lib_profit_taker_parser/" }
lib_profit_taker_core = {version = "*", path = "./lib_profit_taker_core" }

[dependencies]
flutter_rust_bridge = "=2.9.0"
lib_profit_taker_database.workspace = true
lib_profit_taker_parser.workspace = true
lib_profit_taker_core.workspace = true
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
chrono = "0.4.39"
