[package]
name = "lib_profit_taker_database"
version = "0.1.0"

publish.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
rusqlite = { version = "0.30", features = ["bundled"] }
thiserror = "1.0.56"
lib_profit_taker_core = { path = "../lib_profit_taker_core" }
once_cell = "1.20.2"
