[package]
name = "lib_profit_taker_parser"
version = "0.1.0"
publish.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
chrono = "0.4.39"
regex = "1.11.1"
lib_profit_taker_core = { path = "../lib_profit_taker_core" }
lib_profit_taker_database = { path = "../lib_profit_taker_database" }

